fix: added collapsedcontent prop to sidebar and fixed bug in input field when in focused state

--- a/src/InputField/InputField.module.css
+++ b/src/InputField/InputField.module.css
@@ -39,7 +39,7 @@
 }
 
 .input {
-  @apply rounded disabled:bg-gray-50 w-full border-none bg-white px-[10px] py-2 text-sm font-normal text-gray-900 transition-all duration-150 placeholder:text-gray-500 !outline-none;
+  @apply rounded disabled:bg-gray-50 w-full border-none bg-white px-[10px] py-2 text-sm font-normal text-gray-900 transition-all duration-150 placeholder:text-gray-500 !outline-none !border-0 focus:!border-0 shadow-[none] focus:!outline-none;
 }
 
 .input--with-prefix-divider {
